[project]
name = "redirect-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "beanie>=1.30.0",
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "pika>=1.3.2",
    "redis>=6.2.0",
    "uvicorn[standard]>=0.35.0",
]
