[project]
name = "redirect-service"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "bcrypt>=4.3.0",
    "beanie>=1.30.0",
    "fastapi>=0.116.1",
    "motor>=3.7.1",
    "passlib>=1.7.4",
    "pika>=1.3.2",
    "redis>=6.2.0",
    "uvicorn[standard]>=0.35.0",
]

[dependency-groups]
dev = [
    "httpx>=0.28.1",
    "pytest>=8.4.1",
    "pytest-asyncio>=1.0.0",
]
